--- a/kiwi-villa-astro/src/layouts/Layout.astro
+++ b/kiwi-villa-astro/src/layouts/Layout.astro
@@ -143,7 +143,8 @@ const {
 		<meta name="theme-color" content="#7c9bb5" />
 		<meta name="color-scheme" content="light" />
 
-		<script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
+		<!-- Iconify Web Component -->
+		<script src="https://cdn.jsdelivr.net/npm/iconify-icon@2.1.0/dist/iconify-icon.min.js" defer></script>
 		
 		<!-- 錯誤處理初始化 -->
 		<script>
